src/test/ui/cheri/usize-as-pointer-warning.stderr
error: casting an integer to a pointer will produce an invalid pointer on CHERI, and will result in crashes if it is ever dereferenced
  --> $DIR/usize-as-pointer-warning.rs:8:17
   |
LL |     let _pointer = value as *const u32;
   |                    ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/usize-as-pointer-warning.rs:2:9
   |
LL | #![deny(usize_as_pointer)]
   |         ^^^^^^^^^^^^^^^^

error: casting an integer to a pointer will produce an invalid pointer on CHERI, and will result in crashes if it is ever dereferenced
  --> $DIR/usize-as-pointer-warning.rs:11:17
   |
LL |     let _pointer = if std::hint::black_box(false) { value } else { 0 } as WrappedPointer;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

